zien24_implementation/org/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQB__Annual_Recurring_Revenue__c</fullName>
        <label>Annual Recurring Revenue</label>
        <summarizedField>OpportunityLineItem.CPQB__Annual_Recurring_Revenue__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__First_Order_End_Date__c</fullName>
        <label>First Order End Date</label>
        <summarizedField>OpportunityLineItem.CPQB__Order_End_Date__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__First_Order_Start_Date__c</fullName>
        <label>First Order Start Date</label>
        <summarizedField>OpportunityLineItem.CPQB__Order_Start_Date__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__First_Recurring_Order_End_Date__c</fullName>
        <label>First Recurring Order End Date</label>
        <summarizedField>OpportunityLineItem.CPQB__Order_End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.CPQB__Is_using_Price_Recurrence__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__First_Recurring_Order_Start_Date__c</fullName>
        <label>First Recurring Order Start Date</label>
        <summarizedField>OpportunityLineItem.CPQB__Order_Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.CPQB__Is_using_Price_Recurrence__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__Last_Order_End_Date__c</fullName>
        <label>Last Order End Date</label>
        <summarizedField>OpportunityLineItem.CPQB__Order_End_Date__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__Last_Order_Start_Date__c</fullName>
        <label>Last Order Start Date</label>
        <summarizedField>OpportunityLineItem.CPQB__Order_Start_Date__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__Last_Recurring_Order_End_Date__c</fullName>
        <label>Last Recurring Order End Date</label>
        <summarizedField>OpportunityLineItem.CPQB__Order_End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.CPQB__Is_using_Price_Recurrence__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__Last_Recurring_Order_Start_Date__c</fullName>
        <label>Last Recurring Order Start Date</label>
        <summarizedField>OpportunityLineItem.CPQB__Order_Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.CPQB__Is_using_Price_Recurrence__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__Monthly_Recurring_Revenue__c</fullName>
        <label>Monthly Recurring Revenue</label>
        <summarizedField>OpportunityLineItem.CPQB__Monthly_Recurring_Revenue__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__One_Off_Revenue__c</fullName>
        <label>One Off Revenue</label>
        <summarizedField>OpportunityLineItem.CPQB__One_Off_Revenue__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__Renewal_Date__c</fullName>
        <inlineHelpText>The Date on which Renewal can be performed. Will be autocalculated from the Renewal Schedule if set.</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPQB__Renewal_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Schedule</label>
        <referenceTo>CPQB__Renewal_Schedule__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQB__Renewed_from_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed from Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewed into Opportunities</relationshipLabel>
        <relationshipName>Renewed_into_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQB__Renewed_into_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed into Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewed from Opportunities</relationshipLabel>
        <relationshipName>Renewed_from_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQB__Renewed_into_Task_Link__c</fullName>
        <formula>IF(ISBLANK(CPQB__Renewed_into_Task__c), &apos;&apos;, HYPERLINK(&apos;/&apos; + CPQB__Renewed_into_Task__c, &apos;Task&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewed into Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQB__Renewed_into_Task__c</fullName>
        <inlineHelpText>Contains the ID of the Task that this Opportunity renewed into</inlineHelpText>
        <label>Renewed into Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQB__Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <summarizedField>OpportunityLineItem.CPQB__Total_Revenue__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPQB__Weighted_Annual_Recurring_Revenue__c</fullName>
        <formula>CPQB__Annual_Recurring_Revenue__c *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQB__Weighted_Monthly_Recurring_Revenue__c</fullName>
        <formula>CPQB__Monthly_Recurring_Revenue__c *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQB__Weighted_One_Off_Revenue__c</fullName>
        <formula>CPQB__One_Off_Revenue__c *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted One Off Revenue</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>